--- a/code/Cairo Desktop/CairoDesktop.Interop/CairoDesktop.Interop.csproj
+++ b/code/Cairo Desktop/CairoDesktop.Interop/CairoDesktop.Interop.csproj
@@ -68,6 +68,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -85,8 +86,6 @@
     <Compile Include="ExitWindows.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shell.cs" />
-    <Compile Include="Shell.Link.cs" />
     <Compile Include="TOKEN_PRIVILEGES.cs" />
   </ItemGroup>
   <ItemGroup>
